crates/reinhardt-pages/tests/ui/form/fail/datalist_rejects_unknown_property.rs
use reinhardt_pages::form;

fn main() {
	let _form = form! {
		name: InvalidDatalistPropertyForm,
		action: "/invalid",
		fields: {
			suggestions: Datalist {
				options: [("a", "A")],
				label: "Suggestions",
			}
		}
	};
}
